--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -17,8 +17,8 @@
                     </MudButton>
                 }
             </div>
-            <div id="custom-dynamic-playlist" class="pa-4 mt-4 border-t d-flex flex-column flex-center">
-                <MudButton OnClick="ConfigureCustomDynamicPlaylist" Variant="Variant.Filled">
+            <div id="custom-dynamic-playlist" class="pt-4 mt-4 d-flex flex-column flex-center">
+                <MudButton OnClick="ConfigureCustomDynamicPlaylist" Variant="Variant.Outlined">
                     <div class="d-flex flex-column align-center justify-center dynamic-playlist-add">
                         <MudIcon Icon="@Icons.Filled.Settings" Size="Size.Large" Class="mb-2"></MudIcon> Custom
                     </div>
