--- a/MapMaven/Components/Playlists/SortOperationInput.razor
+++ b/MapMaven/Components/Playlists/SortOperationInput.razor
@@ -25,7 +25,7 @@
             </MudSelectItem>
         }
     </MudSelect>
-    <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" Class="pa-1" />
+    <MudIconButton Icon="@Icons.Material.Filled.RemoveCircle" OnClick="OnRemove" Class="pa-1 ml-1" />
 </div>
 <div>
     <ValidationMessage For="() => SortOperation.Field" />
