--- a/MapMaven/Components/Maps/MapBrowser.razor
+++ b/MapMaven/Components/Maps/MapBrowser.razor
@@ -42,7 +42,7 @@
                 @if (!RankedMaps)
                 {
                     <MudTooltip Text="Bulk&nbsp;edit">
-                        <MudIconButton Icon="@(Selectable ? Icons.Material.Filled.CheckBox : Icons.Material.Outlined.CheckBox)" OnClick="ToggleSelectable" />
+                        <MudIconButton Icon="@(Selectable ? Icons.Material.Filled.LibraryAddCheck : Icons.Material.Outlined.LibraryAddCheck)" Class="mx-5" OnClick="ToggleSelectable" />
                     </MudTooltip>
                 }
             </MudItem>
@@ -74,24 +74,24 @@
         @if (!RankedMaps && Selectable)
         {
             <MudPaper Elevation="25" Class="bulk-actions-toolbar">
-                <MudToolBar>
+                <MudToolBar Class="pr-0 border-l-2">
                     <MudChip Variant="Variant.Outlined">@SelectedMaps.Count maps</MudChip>
-                    <MudButton Variant="Variant.Text" Class="mr-5" StartIcon="@Icons.Material.Filled.Close" OnClick="CancelSelection">
+                    <MudButton Variant="Variant.Text" Class="px-5 full-height" StartIcon="@Icons.Material.Filled.Close" OnClick="CancelSelection">
                         Cancel selection
                     </MudButton>
                     <MudDivider Vertical="true" FlexItem="true" />
-                    <MudButton Variant="Variant.Filled" Color="Color.Primary" DisableElevation="true" Class="ml-5 mr-2" StartIcon="@Icons.Material.Filled.PlaylistAdd" Disabled="!SelectedMaps.Any()" OnClick="AddSelectedMapsToPlaylist">
+                    <MudButton Variant="Variant.Text" DisableElevation="true" Class="px-5 full-height" StartIcon="@Icons.Material.Filled.PlaylistAdd" Disabled="!SelectedMaps.Any()" OnClick="AddSelectedMapsToPlaylist">
                         Add to playlist
                     </MudButton>
                     @if (SelectedPlaylist is not null && !SelectedPlaylist.IsDynamicPlaylist)
                     {
-                        <MudButton Variant="Variant.Filled" Color="Color.Primary" DisableElevation="true" Class="mr-2" StartIcon="@Icons.Material.Filled.PlaylistRemove" Disabled="!SelectedMaps.Any()" OnClick="RemoveSelectedMapsFromSelectedPlaylist">
+                        <MudButton Variant="Variant.Text" DisableElevation="true" Class="px-5 full-height" StartIcon="@Icons.Material.Filled.PlaylistRemove" Disabled="!SelectedMaps.Any()" OnClick="RemoveSelectedMapsFromSelectedPlaylist">
                             Remove from playlist
                         </MudButton>
                     }
                     @if (SelectedPlaylist is null || !SelectedPlaylist.IsDynamicPlaylist)
                     {
-                        <MudButton Variant="Variant.Filled" Color="Color.Secondary" DisableElevation="true" StartIcon="@Icons.Material.Filled.Delete" Disabled="!SelectedMaps.Any()" OnClick="DeleteSelectedMaps">
+                        <MudButton Variant="Variant.Text" Color="Color.Secondary" Class="px-5 full-height" DisableElevation="true" StartIcon="@Icons.Material.Filled.Delete" Disabled="!SelectedMaps.Any()" OnClick="DeleteSelectedMaps">
                             Delete
                         </MudButton>
                     }
