--- a/MapMaven/Components/Replay.razor
+++ b/MapMaven/Components/Replay.razor
@@ -1,4 +1,4 @@
-﻿@using MapMaven.Core.ApiClients.ScoreSaber;
+﻿@using MapMaven.Core.Models;
 @using MapMaven.Core.Services;
 @using MapMaven.Core.Services.Leaderboards
 
