--- a/MapMaven/Components/PlayerProfile.razor
+++ b/MapMaven/Components/PlayerProfile.razor
@@ -1,55 +1,69 @@
 ﻿@inherits ReactiveComponent
 
 @using MapMaven.Core.ApiClients.ScoreSaber;
+@using MapMaven.Core.Models;
 @using MapMaven.Core.Services;
 @using MapMaven.Core.Services.Leaderboards;
 
-@if (Player != null)
+@if (ScoreSaberProfile != null)
 {
-    <div class="d-flex pa-2 profile">
-        <img src="@Player.ProfilePictureUrl" class="profile-background-image" />
-        <a href="https://scoresaber.com/u/@Player.Id" class="d-flex align-center">
-            <MudAvatar Image="@Player.ProfilePictureUrl" />
-        </a>
-        <div class="pl-2 full-width">
-            <a href="https://scoresaber.com/u/@Player.Id"><h3>@Player.Name</h3></a>
-            <div>
-                <span>
-                    <MudIcon Icon="@Icons.Material.Filled.Language" Style="font-size: 1rem; transform: translateY(2px);"></MudIcon>
-                    @Player.Rank
-                </span>
-                <span class="ml-4">
-                    <span class="fi fi-@Player.CountryCode.ToLower() mr-1"></span>
-                    @Player.CountryRank
-                </span>
-            </div>
-            <div>
-                <span>
-                    <b>pp</b>
-                    @Player.Pp.ToString("#0.##")
-                </span>
-                <div style="float: right;">
-                    <MudTooltip Text="Refresh all data">
-                        <MudIconButton Icon="@Icons.Material.Filled.Refresh" OnClick="RefreshData" Class="pa-0"></MudIconButton>
-                    </MudTooltip>
-                </div>
-            </div>
-        </div>
-    </div>
+    <MudTabs MinimumTabWidth="20px" Position="Position.Left" ActivePanelIndex="ActivePanelIndex">
+        <MudTabPanel Class="px-1" Style="min-height: 43px" OnClick="() => SetActiveLeaderboardProvider(LeaderboardProviders.ScoreSaber)">
+            <TabContent>
+                <img src="/images/score-saber-logo-small.png" style="width: 24px;" />
+            </TabContent>
+            <ChildContent>
+                <PlayerProfileInfo Player="ScoreSaberProfile"></PlayerProfileInfo>
+            </ChildContent>
+        </MudTabPanel>
+        <MudTabPanel Class="px-1" Style="min-height: 43px" OnClick="() => SetActiveLeaderboardProvider(LeaderboardProviders.BeatLeader)">
+            <TabContent>
+                <img src="/images/beat-leader-logo.svg" style="width: 24px;" />
+            </TabContent>
+            <ChildContent>
+                <PlayerProfileInfo Player="BeatLeaderProfile"></PlayerProfileInfo>
+            </ChildContent>
+        </MudTabPanel>
+    </MudTabs>
 }
 
 @code {
     [Inject]
-    ILeaderboardService ScoreSaberService { get; set; }
+    ILeaderboardService LeaderboardService { get; set; }
+
+    [Inject]
+    ScoreSaberService ScoreSaberService { get; set; }
+
+    [Inject]
+    BeatLeaderService BeatLeaderService { get; set; }
 
     [Inject]
     IMapService MapService { get; set; }
 
-    Core.Models.PlayerProfile Player { get; set; } = null;
+    Core.Models.PlayerProfile? ScoreSaberProfile { get; set; } = null;
+    Core.Models.PlayerProfile? BeatLeaderProfile { get; set; } = null;
+
+    int ActivePanelIndex { get; set; }
 
     protected override void OnInitialized()
     {
-        SubscribeAndBind(ScoreSaberService.PlayerProfile, player => Player = player);
+        SubscribeAndBind(LeaderboardService.ActiveLeaderboardProviderName, providerName =>
+        {
+            ActivePanelIndex = providerName switch
+            {
+                LeaderboardProviders.ScoreSaber => 0,
+                LeaderboardProviders.BeatLeader => 1,
+                _ => 0
+            };
+        });
+
+        SubscribeAndBind(ScoreSaberService.PlayerProfile, player => ScoreSaberProfile = player);
+        SubscribeAndBind(BeatLeaderService.PlayerProfile, player => BeatLeaderProfile = player);
+    }
+
+    void SetActiveLeaderboardProvider(string leaderboardProvider)
+    {
+        LeaderboardService.SetActiveLeaderboardProvider(leaderboardProvider);
     }
 
     void RefreshData()
