--- a/MapMaven/_Imports.razor
+++ b/MapMaven/_Imports.razor
@@ -10,6 +10,7 @@
 @using MapMaven.Components.Shared
 @using MapMaven.Components.Maps
 @using MapMaven.Components.Playlists
+@using MapMaven.Components.Leaderboards
 @using MapMaven.Models
 @using MapMaven.Models.Data
 @using MapMaven.Services
