Only showing available leaderboard providers in dynamic playlist configuration + selecting default + other tweaks

--- a/MapMaven/Components/Leaderboards/LeaderboardSelector.razor
+++ b/MapMaven/Components/Leaderboards/LeaderboardSelector.razor
@@ -1,29 +1,59 @@
-﻿@using MapMaven.Core.Models;
+﻿@inherits ReactiveComponent
 
-<MudChip
-    OnClick="() => SetLeaderboardProvider(LeaderboardProvider.ScoreSaber)"
-    Variant="Variant.Outlined"
-    Disabled="SelectedLeaderboardProvider != LeaderboardProvider.ScoreSaber"
-    Style="border: 1px solid #ffde18; pointer-events: all;">
-    <img src="/images/score-saber-logo-small.png" class="mr-1" style="width: 24px;" />
-    ScoreSaber
-</MudChip>
+@using MapMaven.Core.Models;
+@using MapMaven.Core.Services.Leaderboards;
 
-<MudChip
-    OnClick="() => SetLeaderboardProvider(LeaderboardProvider.BeatLeader)"
-    Variant="Variant.Outlined"
-    Disabled="SelectedLeaderboardProvider != LeaderboardProvider.BeatLeader"
-    Style="border: 1px solid #a437b0; pointer-events: all;">
-    <img src="/images/beat-leader-logo.svg" class="mr-1" style="width: 24px;" />
-    BeatLeader
-</MudChip>
+@if (AvailableLeaderboardProviders.Any(p => p.LeaderboardProviderName == LeaderboardProvider.ScoreSaber))
+{
+    <MudChip OnClick="() => SetLeaderboardProvider(LeaderboardProvider.ScoreSaber)"
+             Variant="Variant.Outlined"
+             Disabled="SelectedLeaderboardProvider != LeaderboardProvider.ScoreSaber"
+             Style="border: 1px solid #ffde18; pointer-events: all;">
+        <img src="/images/score-saber-logo-small.png" class="mr-1" style="width: 24px;" />
+        ScoreSaber
+    </MudChip>
+}
+
+@if (AvailableLeaderboardProviders.Any(p => p.LeaderboardProviderName == LeaderboardProvider.BeatLeader))
+{
+    <MudChip OnClick="() => SetLeaderboardProvider(LeaderboardProvider.BeatLeader)"
+             Variant="Variant.Outlined"
+             Disabled="SelectedLeaderboardProvider != LeaderboardProvider.BeatLeader"
+             Style="border: 1px solid #a437b0; pointer-events: all;">
+        <img src="/images/beat-leader-logo.svg" class="mr-1" style="width: 24px;" />
+        BeatLeader
+    </MudChip>
+}
 
 @code {
     [Parameter]
-    public LeaderboardProvider? SelectedLeaderboardProvider { get; set; } = LeaderboardProvider.ScoreSaber;
+    public LeaderboardProvider? SelectedLeaderboardProvider { get; set; } = null;
 
     [Parameter]
     public EventCallback<LeaderboardProvider?> SelectedLeaderboardProviderChanged { get; set; }
+
+    [Parameter]
+    public bool NewLeaderboardSelection { get; set; } = false;
+
+    [Inject]
+    ILeaderboardService LeaderboardService { get; set; }
+
+    IEnumerable<ILeaderboardProviderService> AvailableLeaderboardProviders;
+
+    protected override async Task OnInitializedAsync()
+    {
+        SubscribeAndBind(LeaderboardService.AvailableLeaderboardProviderServices, leaderboardProviders =>
+        {
+            AvailableLeaderboardProviders = leaderboardProviders;
+
+            var defaultLeaderboardProvider = leaderboardProviders.FirstOrDefault(p => p.LeaderboardProviderName == SelectedLeaderboardProvider)?.LeaderboardProviderName;
+
+            if (NewLeaderboardSelection)
+                defaultLeaderboardProvider = LeaderboardService.ActiveLeaderboardProviderNameValue;
+
+            InvokeAsync(() => SetLeaderboardProvider(defaultLeaderboardProvider));
+        });
+    }
 
     async Task SetLeaderboardProvider(LeaderboardProvider? leaderboardProvider)
     {
