--- a/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
+++ b/MapMaven/Components/Playlists/EditDynamicPlaylistDialog.razor
@@ -1,4 +1,6 @@
-﻿@using MapMaven.Core.Models.DynamicPlaylists;
+﻿@inherits ReactiveComponent
+
+@using MapMaven.Core.Models.DynamicPlaylists;
 @using MapMaven.Extensions;
 @using MapMaven.Components.Playlists;
 
@@ -64,11 +66,14 @@ else
                                                OnClick="() => ChangeMapPool(MapPool.Standard)">
                                         Downloaded maps
                                     </MudButton>
-                                    <MudButton Variant="Variant.Filled"
-                                               Color="@(configuration.MapPool == MapPool.Improvement ? Color.Primary : Color.Default)"
-                                               OnClick="() => ChangeMapPool(MapPool.Improvement)">
-                                        Improvement maps
-                                    </MudButton>
+                                    @if (LeaderboardAvailable)
+                                    {
+                                        <MudButton Variant="Variant.Filled"
+                                                   Color="@(configuration.MapPool == MapPool.Improvement ? Color.Primary : Color.Default)"
+                                                   OnClick="() => ChangeMapPool(MapPool.Improvement)">
+                                            Improvement maps
+                                        </MudButton>
+                                    }
                                 </MudButtonGroup>
                             </div>
                         </MudListItem>
@@ -82,7 +87,7 @@ else
                                 <div class="d-flex flex-row align-center">
                                     <b class="mud-list-subheader pa-0 mr-1">Leaderboard</b>
                                     <div class="ml-auto">
-                                        <LeaderboardSelector @bind-SelectedLeaderboardProvider="SelectedPlaylist.DynamicPlaylistConfiguration.LeaderboardProvider"></LeaderboardSelector>
+                                        <LeaderboardSelector @bind-SelectedLeaderboardProvider="SelectedPlaylist.DynamicPlaylistConfiguration.LeaderboardProvider" NewLeaderboardSelection="NewPlaylist"></LeaderboardSelector>
                                     </div>
                                 </div>
                             </MudListItem>
